--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -18,6 +18,8 @@
     "    )\n",
     "\n",
     "    return x, y\n",
+    "\n",
+    "\n",
     "x, y = load_data()"
    ]
   },
@@ -38,9 +40,7 @@
     "        random_state=0,\n",
     "    )\n",
     "    return x_train, x_test, y_train, y_test\n",
-    "  \n",
-    "  \n",
-    "  \n"
+    "  "
    ]
   },
   {
@@ -74,7 +74,7 @@
     "        verbose=False,\n",
     "    )\n",
     "\n",
-    "    return pipeline\n"
+    "    return pipeline"
    ]
   },
   {
@@ -94,8 +94,7 @@
     "        scoring=\"balanced_accuracy\",\n",
     "    )\n",
     "\n",
-    "    return grid_search\n",
-    "  "
+    "    return grid_search"
    ]
   },
   {
@@ -109,9 +108,7 @@
     "    import pickle\n",
     "\n",
     "    with open(\"estimator.pickle\", \"wb\") as file:\n",
-    "        pickle.dump(estimator, file)\n",
-    "        \n",
-    "        "
+    "        pickle.dump(estimator, file)"
    ]
   },
   {
@@ -120,7 +117,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "        \n",
     "def load_estimator():\n",
     "\n",
     "    import os\n",
@@ -131,8 +127,7 @@
     "    with open(\"estimator.pickle\", \"rb\") as file:\n",
     "        estimator = pickle.load(file)\n",
     "\n",
-    "    return estimator\n",
-    "  "
+    "    return estimator\n"
    ]
   },
   {
@@ -141,6 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def train_estimator(estimator):\n",
     "\n",
     "    from sklearn.linear_model import LinearRegression\n",
@@ -170,9 +166,7 @@
     "        if saved_mae < current_mae:\n",
     "            estimator = best_estimator\n",
     "\n",
-    "    save_estimator(estimator)\n",
-    "    \n",
-    "    "
+    "    save_estimator(estimator)"
    ]
   },
   {
@@ -204,9 +198,7 @@
     "    train_estimator(estimator)\n",
     "\n",
     "\n",
-    "train_logistic_regression()\n",
-    "\n",
-    "\n"
+    "train_logistic_regression()"
    ]
   },
   {
@@ -236,9 +228,7 @@
     "        accuracy_test,\n",
     "        balanced_accuracy_train,\n",
     "        balanced_accuracy_test,\n",
-    "    )\n",
-    "\n",
-    "  "
+    "    )\n"
    ]
   },
   {
@@ -247,7 +237,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " \n",
     "def report(\n",
     "    estimator,\n",
     "    accuracy_train,\n",
@@ -259,8 +248,7 @@
     "    print(estimator, \":\", sep=\"\")\n",
     "    print(\"-\" * 80)\n",
     "    print(f\"Balanced Accuracy: {balanced_accuracy_test} ({balanced_accuracy_train})\")\n",
-    "    print(f\"         Accuracy: {accuracy_test} ({accuracy_train})\")\n",
-    "    "
+    "    print(f\"         Accuracy: {accuracy_test} ({accuracy_train})\")"
    ]
   },
   {
@@ -288,6 +276,7 @@
     }
    ],
    "source": [
+    "    \n",
     "def check_estimator():\n",
     "\n",
     "    import pickle\n",
@@ -328,15 +317,12 @@
     "    )\n",
     "\n",
     "\n",
-    "check_estimator()\n",
-    "\n",
-    "\n",
-    "\n"
+    "check_estimator()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -348,13 +334,13 @@
       "                                   transformers=[('ohe',\n",
       "                                                  OneHotEncoder(dtype='int'),\n",
       "                                                  ['thal'])])),\n",
-      "                ('selectkbest', SelectKBest(k=8)),\n",
+      "                ('selectkbest', SelectKBest(k=6)),\n",
       "                ('estimator',\n",
-      "                 MLPClassifier(hidden_layer_sizes=(8,), learning_rate_init=0.1,\n",
+      "                 MLPClassifier(hidden_layer_sizes=(9,), learning_rate_init=0.1,\n",
       "                               max_iter=10000))]):\n",
       "--------------------------------------------------------------------------------\n",
-      "Balanced Accuracy: 0.8013 (0.8623)\n",
-      "         Accuracy: 0.8065 (0.8787)\n"
+      "Balanced Accuracy: 0.7244 (0.8552)\n",
+      "         Accuracy: 0.7419 (0.875)\n"
      ]
     }
    ],
@@ -383,67 +369,11 @@
     "\n",
     "\n",
     "train_mlp_classifier()\n",
-    "check_estimator()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8712871287128713\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "def load_data():\n",
-    "\n",
-    "    import pandas as pd\n",
-    "\n",
-    "    dataset = pd.read_csv(\"../files/input/heart_disease.csv\")\n",
-    "    y = dataset.pop(\"target\")\n",
-    "    x = dataset.copy()\n",
-    "    x[\"thal\"] = x[\"thal\"].map(\n",
-    "        lambda x: \"normal\" if x not in [\"fixed\", \"fixed\", \"reversible\"] else x\n",
-    "    )\n",
-    "\n",
-    "    return x, y\n",
+    "check_estimator()\n",
     "\n",
     "\n",
-    "\n",
-    "def load_estimator():\n",
-    "\n",
-    "    import os\n",
-    "    import pickle\n",
-    "\n",
-    "    if not os.path.exists(\"estimator.pickle\"):\n",
-    "        return None\n",
-    "    with open(\"estimator.pickle\", \"rb\") as file:\n",
-    "        estimator = pickle.load(file)\n",
-    "\n",
-    "    return estimator\n",
-    "\n",
-    "\n",
-    "def test_01():\n",
-    "\n",
-    "    from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "    x, y = load_data()\n",
-    "    estimator = load_estimator()\n",
-    "\n",
-    "    accuracy = accuracy_score(\n",
-    "        y_true=y,\n",
-    "        y_pred=estimator.predict(x),\n",
-    "    )\n",
-    "\n",
-    "    return print(accuracy)\n",
-    "\n",
-    "test_01() "
+    "# Balanced Accuracy: 0.7628 (0.848)\n",
+    "#         Accuracy: 0.7742 (0.8713)"
    ]
   }
  ],
@@ -463,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
